fix overflow on body

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -12,6 +12,7 @@ html,
 body {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
 }
 
